 -- Include resident memory again in @list process report.
 -- Use mudstate.logging again.
 -- Remove vestigates of macros.
 -- Handle prematurely-chopped comsys.db files.
 -- Bug #548 - DS_AUTODARK was broken for multiple connections.

Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~
 -- Parser is faster in recognizing %-escapes.
 -- Parser function handling is improved with minimum and maximum range
    checking handled in the parser and not in each individual function.
 -- Database and hashtables use a different hash function which is easier
    for gcc to optimize and therefore, Unix distro should benefit.
    Actually, new hash function is faster than anything else I've found
    for all block sizes from 1-byte up.
 -- For string search with GREP and GREPI, added a Boyer-Moore-Horspool
    string search algorithm for speed.
 -- Perform one strip_ansi() call in do_decomp instead of several.
 -- Remove fourth argument to safe_copy_buf to reduce code size. The 4th
    argument was always LBUF_SIZE-1.
 -- Simplify the varargs_preample family of #defines further.
 -- Use MUXCLI on both Unix and Win32 builds instead of getopt on Unix
    and correct-but-inflexible code on Win32.
 -- Improve performance of pool_alloc and pool_free.
 -- Improve performance of @aconnnect/@adisconnect.
 -- Reduce code size by around 4KB by specializing a few calls.
 -- Improve parser performance by making certain tables 'static const' or
    'const'.
 -- Reduce stack frame per-invocation overhead of TinyExec() by 688 bytes to
    138 bytes.
 -- Improve putstring() performance and therefore @dumps.
 -- Improved parser speed by a few instructions.
 -- Improve speed of TRANSLATE() and emit %t for hardtabs.

Cosmetic Changes:
~~~~~~~~~~~~~~~~
 -- Consistent file headers and comment blocks. Remove trailing spaces and
    hardtabs.
 -- Remove unused sections of #ifdef'ed out code.

Miscellaneous:
~~~~~~~~~~~~~
 -- Added Manual in LaTeX format.